# couchbase_lite_dart

./: .gitignore  .gitmodules  .metadata  API.md  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
.github/workflows/: testing.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/couchbase_lite_c/: CouchbaseLite_cPlugin.kt
android/src/main/kotlin/com/example/couchbase_lite_dart/: CouchbaseLite_cPlugin.kt
benchmark/: cbl_benchmark.dart  document_benchmark.dart
example/: .metadata  README.md  pubspec.yaml
example/android/: .project
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/couchbase_lite_c_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/couchbase_lite_dart_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/lib/: fleece.dart  main.dart
example_null/: .metadata  README.md  pubspec.yaml
example_null/lib/: main.dart
example_null/test/: widget_test.dart
flutter_libs/: pubspec.yaml
flutter_libs/android/: build.gradle  settings.gradle
flutter_libs/android/src/main/: AndroidManifest.xml
flutter_libs/android/src/main/java/io/couchbase_lite_dart/cblite_libs/: CouchbaseLiteDartFlutterLibsPlugin.java
flutter_libs/android/src/main/java/io/couchbase_lite_dart/couchbase_lite_dart_flutter_libs/: CouchbaseLiteDartFlutterLibsPlugin.java
flutter_libs/lib/: objectbox_flutter_libs.dart
flutter_libs/linux/: CMakeLists.txt
flutter_libs/windows/: CMakeLists.txt  cblite_flutter_libs_plugin.cpp  cblite_libs_plugin.cpp
flutter_libs/windows/include/cblite_flutter_libs/: cblite_flutter_libs_plugin.h  cblite_libs_plugin.h
include/cbl/: Dart.h  Dart_win.h  Dart_xcode.h  cbl_config.h
lib/: couchbase_lite_c.dart  couchbase_lite_dart.dart
lib/bindings/: blob.dart  database.dart  document.dart  error.dart  fleece.dart  library.dart  listeners.dart  log.dart  query.dart  replicator.dart
lib/src/: base.dart  blob.dart  cblc_native.dart  database.dart  database_error.dart  document.dart  listeners.dart  log.dart  query.dart  replicator.dart
lib/src/fleece/: flarray.dart  fldict.dart  fldoc.dart  flslice.dart  flvalue.dart
lib/src/native/: Dart.cc  Dart.h  bindings.dart  cblc_base.dart  custom_bindings.dart
lib/src/native/C/include/cbl/: Dart.h
lib/src/native/C/src/: Dart.cc
lib/src/native/C/src/exports/: Dart_Exports.txt
lib/src/native/headers/: Dart.h
test/: _test_utils.dart  blob_test.dart  database_test.dart  document_test.dart  fleece_test.dart  query_test.dart  replicator_test.dart
test/memtest/: document.dart  flarray.dart  fldict.dart  fldoc.dart  flslice.dart  flvalue.dart  memtest.dart  query.dart  query_listener.dart
test/memtest/fleece/: flarray.dart  fldict.dart  fldoc.dart  flslice.dart  flvalue.dart
tool/: main.dart
tools/: main.dart
